# resynth-api

./: CMakeLists.txt  README.md  build.sh
apps/: CMakeLists.txt  resynthcli.c
src/: CMakeLists.txt  resynth.c  resynth.h
src/resynth_c/: engine.h  resynth.c
src/resynth_gimp/: buildSwitches.h  imageSynth.c  orderTarget.h  progress.h  resynth.c  synthesize.h
